--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 40%;
  }
      
 
@@ -18,5 +18,6 @@ p {
 }
 
 body {
-    float: scroll;
+  float: scroll;
+  background-color: lightgoldenrodyellow;
 }
