--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   background-color: lightgoldenrodyellow;
 }
 
-.header {
+.header1 {
   background-image: url(crochet-header.jpg);
   height: 400px;
   background-position: center center;
