--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 h1 {
-  color: blue;
+  color: #41292C;
+  font-family: 'Covered By Your Grace', sans-serif;
+  font-size: 100px;
+  line-height: 76px;
+  margin: 0;
+  position: relative;
   text-align: center;
+  top: 20%;
 }
  .pink {
   display: block;
@@ -18,8 +24,15 @@ p {
 }
 
 body {
-  float: scroll;
-  background-color: lightgoldenrodyellow;
+  padding: 0;
+  margin: 0;
+  background: #F7F7F7;
+  /* Old browsers */
+  background: -moz-linear-gradient(45deg, #F7F7F7 0%, #EAE0D5 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #F7F7F7 0%, #EAE0D5 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #F7F7F7 0%, #EAE0D5 100%);
 }
 
 .header1 {
